Keyboard theme with light/dark theme options finished.

--- a/LimeStudio/app/src/main/res/layout/input.xml
+++ b/LimeStudio/app/src/main/res/layout/input.xml
@@ -32,7 +32,7 @@
     android:keyTextSize = "@dimen/key_text_size"
     android:labelTextSize = "@dimen/label_text_size"
     android:popupLayout="@layout/keyboard_popup"
-    style="?attr/LIMEKeyboardViewLayout"
+    style="?attr/LIMEKeyboardLayout"
 
 
     />
