--- a/LimeStudio/app/src/main/res/layout/inputcandidate.xml
+++ b/LimeStudio/app/src/main/res/layout/inputcandidate.xml
@@ -74,6 +74,6 @@
         android:keyTextSize = "@dimen/key_text_size"
         android:labelTextSize = "@dimen/label_text_size"
         android:popupLayout="@layout/keyboard_popup"
-        style="?attr/LIMEKeyboardViewLayout"
+        style="?attr/LIMEKeyboardLayout"
         />
 </net.toload.main.hd.candidate.CandidateInInputViewContainer>
