--- a/LimeStudio/app/src/main/res/values/themes.xml
+++ b/LimeStudio/app/src/main/res/values/themes.xml
@@ -36,13 +36,15 @@
     <item name="LIMEKeyboardStyle">@style/LIMEKeyboardLight</item>
     <item name="LIMEBaseKeyboardStyle">@style/LIMEBaseKeyboardLight</item>
     <item name="LIMEKeyboardBaseView">@style/LIMEKeyboardBaseView.Light</item>
-    <item name="LIMEKeyboardViewLayout">@style/LIMEKeyboardViewLayoutLight</item>
+    <item name="LIMEKeyboardLayout">@style/LIMEKeyboardLayoutLight</item>
+    <item name="LIMEPopupKeyboardLayout">@style/LIMEPopupKeyboardLayoutLight</item>
   </style>
   <style name="LIMETheme.Dark">
     <item name="LIMEKeyboardStyle">@style/LIMEKeyboardDark</item>
     <item name="LIMEBaseKeyboardStyle">@style/LIMEBaseKeyboardDark</item>
     <item name="LIMEKeyboardBaseView">@style/LIMEKeyboardBaseView.Dark</item>
-    <item name="LIMEKeyboardViewLayout">@style/LIMEKeyboardViewLayoutDark</item>
+    <item name="LIMEKeyboardLayout">@style/LIMEKeyboardLayoutDark</item>
+    <item name="LIMEPopupKeyboardLayout">@style/LIMEPopupKeyboardLayoutDark</item>
   </style>
   
 </resources>
