--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
@@ -447,7 +447,7 @@
     <string name="l3_initial_backup_confirm">您是否要备份数据库?</string>
     <string name="l3_initial_backup_error">数据库备份失败</string>
     <string name="l3_initial_restore_database">还原数据库</string>
-    <string name="l3_initial_restore_error">还原失败, 且确定备份文档存在.</string>
+    <string name="l3_initial_restore_error">还原失败, 请确定备份文档存在.</string>
     <string name="l3_initial_restore_confirm">您是否要还原数据库?</string>
     <string name="l3_initial_restore_start">开始还原数据库</string>
     <string name="l3_initial_restore_end">数据库还原完成</string>
