--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -447,7 +447,7 @@
     <string name="l3_initial_backup_confirm">您是否要備份資料庫?</string>
     <string name="l3_initial_backup_error">資料庫備份失敗</string>
     <string name="l3_initial_restore_database">還原資料庫</string>
-    <string name="l3_initial_restore_error">還原失敗, 且確定備份檔案存在.</string>
+    <string name="l3_initial_restore_error">還原失敗, 請確定備份檔案存在.</string>
     <string name="l3_initial_restore_confirm">您是否要還原資料庫?</string>
     <string name="l3_initial_restore_start">開始還原資料庫</string>
     <string name="l3_initial_restore_end">資料庫還原完成</string>
