--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -145,8 +145,11 @@
     <string name="accept_number_index_summary">允許使用數字為輸入法字根</string>
     <string name="accept_symbol_index">啟動符號對應</string>
     <string name="accept_symbol_index_summary">允許使用符號為輸入法字根</string>
-    <string name="switch_english_mode">快速切換輸入模式</string>
-    <string name="switch_english_mode_summary">[SHIFT]+[SPACE] 鍵切換輸入模式 (實體鍵盤)</string>
+    <string name="switch_english_mode_1">快速切換輸入模式1</string>
+    <string name="switch_english_mode_summary_1 ">[SHIFT]+[SPACE] 鍵切換輸入模式 (實體鍵盤)</string>
+    <string name="switch_english_mode_2">快速切換輸入模式2</string>
+    <string name="switch_english_mode_summary_2"> 單按 [SHIFT] 鍵切換輸入模式 (實體鍵盤)</string>
+
 
     <!-- Changjei Keyboard, Standard Keyboard-->
     <string name="typing_mode_english">切換輸入模式 / 英文</string>
