--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -83,6 +83,7 @@
     <string name="number_row_in_english_summary">在英文鍵盤顯示數字列(5列鍵盤)</string>
     <string name="disable_software_keyboard">關閉軟體鍵盤顯示</string>
     <string name="fixed_candidate_view_display">選字列固定顯示</string>
+    <string name="enable_transparent_candidate_view">選字列使用透明背景</string>
 
     <string name="three_rows_remapping">3排鍵盤重對應</string>
     <string name="three_rows_remapping_summary">對應 1234567890-;至 qwertyuiopv.</string>
