--- a/LimeStudio/app/src/main/res/values/colors.xml
+++ b/LimeStudio/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
 <resources>
     <color name="candidate_normal_text">#FF0F0F0F</color>
     <color name="candidate_inverted_text">#FFFAFAFA</color>
+    <color name="candidate_inverted_text_physical_keyboard">#FFD05050</color>
     <color name="candidate_dictionary">#FF101010</color>
     <color name="candidate_recommended_text">#FFE35900</color>
     <color name="candidate_spacer">#FF101010</color>
