--- a/LimeStudio/app/src/main/res/xml/symbols_shift.xml
+++ b/LimeStudio/app/src/main/res/xml/symbols_shift.xml
@@ -32,6 +32,19 @@
     >
 
     <Row>
+        <Key limehd:codes="49" limehd:keyLabel="1" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="50" limehd:keyLabel="2"/>
+        <Key limehd:codes="51" limehd:keyLabel="3"/>
+        <Key limehd:codes="52" limehd:keyLabel="4"/>
+        <Key limehd:codes="53" limehd:keyLabel="5"/>
+        <Key limehd:codes="54" limehd:keyLabel="6"/>
+        <Key limehd:codes="55" limehd:keyLabel="7"/>
+        <Key limehd:codes="56" limehd:keyLabel="8"/>
+        <Key limehd:codes="57" limehd:keyLabel="9"/>
+        <Key limehd:codes="48" limehd:keyLabel="0" limehd:keyEdgeFlags="right"/>
+    </Row>
+
+    <Row>
         <Key limehd:codes="126" limehd:keyLabel="~" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="177" limehd:keyLabel="±"/>
         <Key limehd:codes="215" limehd:keyLabel="×"/>
