--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
@@ -77,6 +77,8 @@
 
     <string name="keyboard_list">LIME输入法切换</string>
 
+    <string name="enable_emoji">开启 EMOJI 显示</string>
+    <string name="enable_emoji_summary">依字根或中文组字显示EMOJI图示</string>
     <string name="persistent_language_mode">记忆中英模式</string>
     <string name="persistent_language_mode_summary">下次切换前保持中英模式</string>
     <string name="number_row_in_english">数字列英文键盘</string>
