--- a/LimeStudio/app/src/main/res/xml/preference.xml
+++ b/LimeStudio/app/src/main/res/xml/preference.xml
@@ -48,6 +48,11 @@
                  android:defaultValue="0;1;2;3;4;5;6;7;8;9;10;11"
                  android:dialogTitle="@string/keyboard_list" />-->
         <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="enable_emoji"
+            android:summary="@string/enable_emoji_summary"
+            android:title="@string/enable_emoji" />
+        <CheckBoxPreference
             android:defaultValue="false"
             android:key="persistent_language_mode"
             android:summary="@string/persistent_language_mode_summary"
