Add old version download path and fixed few bugs

--- a/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
@@ -127,6 +127,8 @@
         android:layout_height="fill_parent"
         android:id="@+id/SetupImList"
         android:padding="5dp">
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -303,7 +305,8 @@
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp" >
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -412,8 +415,7 @@
 
             <TableRow
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="5dp">
+                android:layout_height="fill_parent">
 
                 <Button
                     android:layout_width="0dp"
@@ -472,6 +474,48 @@
             </TableRow>
         </TableLayout>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/setup_im_download_old"
+            android:id="@+id/textView55" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/setup_im_download_old_summary"
+            android:id="@+id/textView53"
+            android:layout_marginBottom="5dp" />
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginBottom="5dp">
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/setup_im_download_old_version"
+                    android:id="@+id/btnDownloadOldVersion"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp" />
+
+            </TableRow>
+        </TableLayout>
 
     </LinearLayout>
     </LinearLayout>
