--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -508,9 +508,13 @@
     <string name="l3_im_download_from_dayi_start">開始下載 OpenVanilla 大易字根</string>
     <string name="l3_im_download_from_dayi_install">開始安裝 OpenVanilla 大易字根</string>
 
+    <string name="l3_im_download_from_phonetic_big5">安裝 OpenVanilla 注音字根 (BIG5字集)</string>
+
     <string name="l3_im_download_from_phonetic">安裝 OpenVanilla 注音字根</string>
     <string name="l3_im_download_from_phonetic_start">開始下載 OpenVanilla 注音字根</string>
     <string name="l3_im_download_from_phonetic_install">開始安裝 OpenVanilla 注音字根</string>
+
+    <string name="l3_im_download_from_phonetic_adv_big5">安裝注音連打字根 (BIG5字集)</string>
 
     <string name="l3_im_download_from_phonetic_adv">安裝注音連打字根</string>
     <string name="l3_im_download_from_phonetic_adv_start">開始下載注音連打字根</string>
