--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -78,7 +78,8 @@
     <string name="keyboard_list">LIME 輸入法切換</string>
 
     <string name="enable_emoji">開啟 EMOJI 顯示</string>
-    <string name="enable_emoji_summary">依字根或中文組字顯示EMOJI圖示</string>
+    <string name="enable_emoji_summary">依字根或中文組字顯示圖示, 由於字型支援的差異所以部份圖示可能無法正確顯示</string>
+    <string name="enable_emoji_position">設定 EMOJI 候選列顯示位置</string>
     <string name="persistent_language_mode">記憶中英模式</string>
     <string name="persistent_language_mode_summary">下次切換前保持中英模式</string>
     <string name="number_row_in_english">數字列英文鍵盤</string>
@@ -228,6 +229,18 @@
         <item>無</item>
         <item>繁轉簡</item>
         <item>簡轉繁</item>
+    </string-array>
+
+    <string-array name="emoji_display_position">
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
     </string-array>
 
     <string-array name="han_convert_options_values">
