--- a/LimeStudio/app/src/main/res/xml/preference.xml
+++ b/LimeStudio/app/src/main/res/xml/preference.xml
@@ -47,11 +47,21 @@
                  android:entryValues="@array/keyboard_defaultstate"
                  android:defaultValue="0;1;2;3;4;5;6;7;8;9;10;11"
                  android:dialogTitle="@string/keyboard_list" />-->
+
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="enable_emoji"
             android:summary="@string/enable_emoji_summary"
             android:title="@string/enable_emoji" />
+        <ListPreference
+            android:defaultValue="3"
+            android:dependency="enable_emoji"
+            android:dialogTitle="@string/enable_emoji_position"
+            android:entries="@array/emoji_display_position"
+            android:entryValues="@array/emoji_display_position"
+            android:key="enable_emoji_position"
+            android:title="@string/enable_emoji_position" />
+
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="persistent_language_mode"
