--- a/LimeStudio/app/src/main/res/xml/popup_c_punctuation.xml
+++ b/LimeStudio/app/src/main/res/xml/popup_c_punctuation.xml
@@ -39,7 +39,8 @@
         <Key limehd:keyLabel="？" />
         <Key limehd:keyLabel="：" />
         <Key limehd:keyLabel="．" />
-        <Key limehd:keyLabel="。" limehd:keyEdgeFlags="right" />
+        <Key limehd:keyLabel="。" />
+        <Key limehd:keyLabel="＠" limehd:keyEdgeFlags="right" />
     </Row>
     <Row limehd:rowEdgeFlags="bottom">
          <Key limehd:keyLabel="】" limehd:keyEdgeFlags="left" />
@@ -49,7 +50,8 @@
         <Key limehd:keyLabel="！" />
         <Key limehd:keyLabel="；" />
         <Key limehd:keyLabel="、" />
-        <Key limehd:keyLabel="，" limehd:keyEdgeFlags="right" />
+        <Key limehd:keyLabel="，"/>
+        <Key limehd:keyLabel="　" limehd:keyEdgeFlags="right" />
     </Row>
     
 </Keyboard>
